Fix loading of perfect-scrollbar CSS, CSS updates
Express font-sizes in em, not px
Remove now unneeded feed styling

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 #video-error {
   position: absolute;
   text-align: center;
-  font-size: 21px;
+  font-size: 1.313em;
   bottom: 20px;
   left: 30px;
   z-index: 0;
@@ -79,7 +79,7 @@
   position: absolute;
   top: 58px;
   left: 450px;
-  font-size: 21px;
+  font-size: 1.313em;
 }
 
 /* Stylized LEGO Universe News text */
@@ -89,7 +89,7 @@
   left: 565px;
   font-family: Impact, "Nunito", sans-serif;
   color: #e6dede;
-  font-size: 20px;
+  font-size: 1.25em;
 }
 
 /* General settings for all text */
@@ -149,23 +149,21 @@
   top: -1.313em;
 }
 
-/* Use our favorite fonts */
-.itemTitle a, .itemContent { font-family: "Nunito", Arial, sans-serif; }
-
 /* Change the size and color of header */
 .itemTitle a {
   font-size: 0.9em;
   color: #C6C6C6;
 }
 
+/* Use our favorite fonts */
+.itemTitle a,
+.itemContent { font-family: "Nunito", Arial, sans-serif; }
+
 /* Display underline on hover to denote a link */
-.itemTitle a:hover, .itemContent a:hover { text-decoration:underline; }
+.itemTitle a:hover { text-decoration: underline; }
 
 /* Change the size and color of the paragraph */
 .itemContent {
   font-size: 0.7em;
   color: white;
 }
-
-/* Blend any links with the paragraph */
-.itemContent a { color: white; }
